-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.2, 6.10.0 FF
-
None
-
Debian testing, Plasma Wayland session
-
-
9b9511c35 (dev), e40d85403 (6.10), df7d38d7e (6.9), f0798c1cf (tqtc/lts-6.8)
I'm seeing frequent Qt Creator crashes when the Orca screen reader is active. Very often, Qt Creator crashes within a minute after starting Orca, but this is unfortunately not really reliably reproducable (i.e. I don't have exact steps that will always reproduce the problem). It probably happens in about 60-80% of the cases within one minute, otherwise usually at some point in time after using Qt Creator further with the screen reader running.
Steps to reproduce:
- start the Orca screen reader
- start Qt Creator (ideally with a saved session that has some source file open, otherwise open one)
- use cursor keys to navigate through the source file
- if no crash happens yet, continue using Qt Creator normally until it eventually crashes
Further information
- I originally observed this with Qt Creator 16.0.1 and Qt 6.8.2 as packaged in Debian (package libqt6core6t64 6.8.2+dfsg-5+b1), but can also reproduce with self-compiled Qt Creator and qtbase from the current git master/dev branches.
- Unfortunately, the crash seems much less reproducible while recording such Qt Creator runs with rr( https://rr-project.org/ ) for debugging purposes.
- From a first analysis, this looks related to QTreeView accessibility in qtbase.
Sample backtrace of a crash (segfault):
1 ?? 0x334000000e1 2 QAccessibleInterface::tableInterface qaccessible.h 99 0x7f7cca278092 3 AtSpiAdaptor::accessibleInterface atspiadaptor.cpp 1619 0x7f7cca29e9a3 4 AtSpiAdaptor::handleMessage atspiadaptor.cpp 1472 0x7f7cca29d425 5 QDBusConnectionPrivate::activateObject qdbusintegrator.cpp 1448 0x7f7cc4a91df7 6 QDBusActivateObjectEvent::placeMetaCall qdbusintegrator.cpp 1604 0x7f7cc4a92db0 7 QObject::event qobject.cpp 1429 0x7f7cc8ce8d81 8 QApplicationPrivate::notify_helper qapplication.cpp 3309 0x7f7ccabd8d70 9 QApplication::notify qapplication.cpp 3259 0x7f7ccabdcc4c 10 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1110 0x7f7cc8c39669 11 QCoreApplication::sendEvent qcoreapplication.cpp 1550 0x7f7cc8c3a2d9 12 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1890 0x7f7cc8c3b218 13 QCoreApplication::sendPostedEvents qcoreapplication.cpp 1744 0x7f7cc8c3a11c 14 postEventSourceDispatch qeventdispatcher_glib.cpp 246 0x7f7cc91ce9d1 15 ?? 0x7f7cc6b04305 16 ?? 0x7f7cc6b06537 17 g_main_context_iteration 0x7f7cc6b06ca0 18 QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 399 0x7f7cc91cdc0b 19 QPAEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 89 0x7f7cca4f1198 20 QEventLoop::processEvents qeventloop.cpp 104 0x7f7cc8c52f20 21 QEventLoop::exec qeventloop.cpp 186 0x7f7cc8c53173 22 QCoreApplication::exec qcoreapplication.cpp 1453 0x7f7cc8c39fce 23 QGuiApplication::exec qguiapplication.cpp 1986 0x7f7cc9c7085a 24 QApplication::exec qapplication.cpp 2576 0x7f7ccabd9e6d 25 main main.cpp 1017 0x5610b44801d5
For Gerrit Dashboard: QTBUG-136074 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
640704,5 | QTreeView a11y: Avoid deleting child while it's in use | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
642786,7 | QTreeView: Delay reset of accessibility when laying out items lazily | dev | qt/qtbase | Status: MERGED | +2 | 0 |
650925,2 | QTreeView: Delay reset of accessibility when laying out items lazily | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
651047,2 | QTreeView: Delay reset of accessibility when laying out items lazily | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
651184,2 | QTreeView: Delay reset of accessibility when laying out items lazily | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |